--- a/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaFisica.cshtml
@@ -196,7 +196,7 @@
         </form>
     </div>
 
-    <div class="row col-12 cadastro-options align-items-center pl-5 pr-5">
+    <div class="row col-12 cadastro-options justify-content-center align-items-center pl-5 pr-5">
 
         <span class="@ViewBag.cssClass">
             @ViewBag.Message
