--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -70,7 +70,7 @@
                         <div>
 
                           
-                           <a @*href="/Comprador/UpdatePessoaFisica"*@>
+                           <a href="/Fornecedor/UpdateFornecedor/?Cnpj=@Model.Cnpj">
                                <img style="width:40px;height: 40px;margin-left: -37rem;margin-top: 8rem;" src="~/Content/images/edit.png" />
                              </a>
                         </div>
