--- a/SupplierRanking/Views/Shared/_LayoutCadastro.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutCadastro.cshtml
@@ -51,6 +51,7 @@
         <script src="~/Content/js/cadastro-pessoa-fisica.js"></script>
         <script src="~/Content/js/cadastro-pessoa-juridica.js"></script>
         <script src="~/Content/js/cadastro-fornecedor.js"></script>
+        <script src="~/Content/js/cadastro-funcionario.js"></script>
         <script src="~/Content/js/update.js"></script>
         <script src="~/Content/js/nova-senha.js"></script>
     </body>
