--- a/SupplierRanking/Views/Comprador/CadastroPessoaJuridica.cshtml
+++ b/SupplierRanking/Views/Comprador/CadastroPessoaJuridica.cshtml
@@ -193,7 +193,7 @@
     </div>
 
 
-    <div class="row col-12 cadastro-options align-items-center pl-5 pr-5">
+    <div class="row col-12 cadastro-options justify-content-center align-items-center pl-5 pr-5">
 
         <span class="@ViewBag.cssClass">
             @ViewBag.Message
