--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -12,35 +12,33 @@
                 });
             }
         </script>
+
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        @*<meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-       
-        <title>Collapsible sidebar using Bootstrap 4</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">*@
 
         <!-- Bootstrap CSS CDN -->
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        @*<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">*@
+        
         <!-- Our Custom CSS -->
+        
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700">
+        <link rel="stylesheet" href="~/Content/config/css/style.css" />
         <link href="~/Content/css/checkbox-home-logada.css" rel="stylesheet" />
         <link href="~/Content/css/style_logada.css" rel="stylesheet" />
         <link href="~/Content/config/css/avaliar-star.css" rel="stylesheet" />
 
-       
-
-
-        <script src="~/Content/js/carousel-perfil.js"></script>
-       
         <!-- Font Awesome JS -->
-        <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
-        <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
+        @*<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>*@
     </head>
 
-    <body style="background: white;">
+    <body>
         <div>
             <section style=" width: 2000px;height: 104px;background: #0C496BE6;position: absolute;top: 0px;left:0px;">
 
@@ -52,31 +50,25 @@
                         <span>Toggle Sidebar</span>
 
                     </button>-->
-
-
                             <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <i class="fas fa-align-justify"></i>
                             </button>
 
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <input name="pesquisa" class="col-10 wrap-input pl-2 mt-3" style="width:870px;height: 40px;background-color: white;margin-left: 53px;" placeholder="Digite aqui o nome do fornecedor..." />
-
-
                             </div>
 
                             <!--<img style="width: 27px;height: 27px;margin-right: 100px; "src="imagens/pesquisa.png"/>-->
                             <button type="submit" style="background: url('../Content/images/pesquisa.png') no-repeat;width: 30px;height:30px;margin-right: 45px;margin-top: -37px;float: right;"></button>
 
-
                             <button type="button" id="btfiltro" onclick="filtro()" style="background: url('../Content/images/filtro.png') no-repeat;width: 30px;height:30px;margin-top: -35px;float: right;"
-                                    class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"></button>
+                                    class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+                            </button>
 
 
 
                         </div>
-
                     </form>
-
                 </nav>
 
                 <div class="container-fluid">
@@ -86,23 +78,20 @@
 
             </button>-->
 
-
-
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
                     </button>
 
-
                     <!--<img style="width: 27px;height: 27px;margin-right: 100px; "src="imagens/pesquisa.png"/>-->
-
-
-
 
                 </div>
 
-
             </section>
-            <nav id="sidebar">
+
+
+
+
+            @*<nav id="sidebar">
                 <div class="sidebar-header" style="height: 104px;">
                     <h3>Supplier Ranking</h3>
                 </div>
@@ -110,9 +99,6 @@
                     <li class="active">
                         <a href="/HomeLogada/RankingGeral"  aria-expanded="false">Home</a>
                     </li>
-                    @*<li>
-                        <a href="/HomeLogada/Pesquisa"  aria-expanded="false">Pesquisar</a>
-                    </li>*@
                     
                     <li>
                         <a href="/HomeLogada/RankingPremium"  aria-expanded="false">Ranking Premium</a>
@@ -123,7 +109,7 @@
                     </li>
 
                     <li>
-                        @*<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" >Sair</a>*@ 
+                        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" >Sair</a>
                         @Html.ActionLink("Sair", "Sair", "Home", new { area = "" }, new { @class = "" })
                     </li>
                 </ul>
@@ -140,9 +126,9 @@
                         <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
                     }
                     
-            </nav>
+            </nav>*@
             <!---- Modal ---->
-            <div class="modal fade" id="myModal" role="dialog">
+            @*<div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
                         <div class="modal-header" style="
@@ -194,15 +180,12 @@
 
                             </div>
                         </form>
-
-
-
-
-
                     </div>
                 </div>
-            </div>
-                        </div>
+            </div>*@
+
+
+        </div>
 
         <div class="conteudo-logada row pl-5 pr-5 col-11" style="top: 105px;">
             @RenderBody()
