--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -141,7 +141,8 @@
                         <a style="font-family:inherit; font-size: 20px; display:flex; justify-content:center;">@Session["NomeUsuario"].ToString()</a>
                     }
                     <br />
-                    <a href="/Comprador/UpdateSenha/" >Alterar senha</a>
+                    <a style="text-decoration: none;color: white;font-family: inherit;
+                    margin-left: 25px;" href="/Comprador/UpdateSenha/" >Alterar senha</a>
                    
                     
             </nav>
