--- a/SupplierRanking/Views/Comprador/UpdatePessoaFisica.cshtml
+++ b/SupplierRanking/Views/Comprador/UpdatePessoaFisica.cshtml
@@ -14,7 +14,7 @@
                 Editar informações
             </h2>
 
-            <form action="../Comprador/UpdatePessoaFisica" method="post" class="login100-form validate-form">
+            <form action="/Comprador/UpdatePessoaFisica" method="post" class="login100-form validate-form">
                 <p>@ViewBag.Message</p>
                 <!--- Campos do Comprador Fisico -->
                 <div>
