--- a/SupplierRanking/Views/Comprador/UpdatePessoaJuridica.cshtml
+++ b/SupplierRanking/Views/Comprador/UpdatePessoaJuridica.cshtml
@@ -12,7 +12,7 @@
 
         <h2 style="margin-left: -45px;margin-bottom: 41px;" >Editar informações</h2>
 
-        <form action="../Comprador/UpdatePessoaJuridica" method="post" class="login100-form validate-form">
+        <form action="/Comprador/UpdatePessoaJuridica" method="post" class="login100-form validate-form">
             <p>@ViewBag.Message</p>
             <!--- Campos do Comprador Fisico -->
             <div>
