--- a/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
@@ -94,7 +94,7 @@
                     <!--- Visualizar Senha --->
                     <div class="d-flex align-items-center">
                         <button id="btnSenha">
-                            <img src="/Content/images/comprador.png" />
+                            <img src="~/Content/images/olhoFechado.png" />
                         </button>
                     </div>
                 </div>
