--- a/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
@@ -45,7 +45,7 @@
             <!--- Visualizar Senha --->
             <div class="col-2 d-flex justify-content-center pr-5">
                 <button id="btnSenha">
-                    <img src="/Content/images/comprador.png" />
+                    <img src="~/Content/images/olhoFechado.png" />
                 </button>
             </div>
         </div>
