--- a/SupplierRanking/Views/Comprador/UpdateSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/UpdateSenha.cshtml
@@ -49,7 +49,8 @@
             <!--- Visualizar Senha --->
             <div class="col-2 d-flex justify-content-center pr-5">
                 <button id="btnSenha">
-                    <img src="/Content/images/comprador.png" />
+
+                    <img src="~/Content/images/fornecedor.png" />
                 </button>
             </div>
         </div>
