--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -70,8 +70,9 @@
                         <h1 style="position: absolute;right: 504px;top: 361px;font-size: 22px;">@Model.Email</h1>
                         <img style="position: absolute;right: 787px;top: 374px;width: 40px;" src="~/Content/images/email1.png" />
 
-                    @if (Session["UserFornecedor"].ToString() == Model.Cnpj)
-                    {
+                    @*@if (Session["UserFornecedor"].ToString() == Model.Cnpj)
+                    {*@
+                      
                         <div>
 
                           
@@ -79,7 +80,7 @@
                                <img style="width:40px;height: 40px;margin-left: -37rem;margin-top: 8rem;" src="~/Content/images/edit.png" />
                              </a>
                         </div>
-                    }
+                    @*}*@
 
                     </div>
 
