--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -134,6 +134,10 @@
                         {
                         <a href="/Comprador/UpdatePessoaJuridica/?Codigo=@Session["CodigoUsuario"].ToString()">UpdatePessoaJuridica</a>
                         }
+                        else if (Session["UserFornecedor"] != null)
+                        {
+                            <a href="/Fornecedor/UpdateFornecedor/?Cnpj=@Session["UserFornecedor"].ToString()">UpdateFornecedor</a>
+                        }
 
                         @*@Html.ActionLink("Editar informações", "UpdatePessoaFisica", "Comprador", new { area = "" }, new { @class = "" })*@
 
@@ -147,7 +151,7 @@
                     </a>
                     <a style="font-family:inherit; font-size: 20px; margin-left: 23px;">@Session["NomeUsuario"].ToString()</a>  
                     }
-                    else
+                    else 
                     {
                         <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
                         <a style="font-family:inherit; font-size: 20px; display:flex; justify-content:center;">@Session["NomeUsuario"].ToString()</a>
