Val - Menu HomeLogada e Avaliação - fazer os testes amanhã

--- a/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
@@ -44,7 +44,7 @@
         </div>
 
         <form class="col-12 cadastro-form d-flex justify-content-end mt-4 pt-4 pr-2 pl-0"
-              method="post" action="../Fornecedor/CadastroFornecedor" enctype="multipart/form-data">
+              method="post" action="/Fornecedor/CadastroFornecedor" enctype="multipart/form-data">
 
             <!------------------ PRIMEIRA TELA ------------------>
             <!--- Imagem Perfil --->
