--- a/SupplierRanking/Views/Home/Index.cshtml
+++ b/SupplierRanking/Views/Home/Index.cshtml
@@ -270,9 +270,9 @@
                     </p>
                     <p>
                         <a class="btn btn-primary btn-lg"
-                           data-toggle="modal"
-                           data-target="#modalRequest"
-                           href="#" >
+                           @*data-toggle="modal"
+                           data-target="#modalRequest"*@
+                           href="/Fornecedor/CadastroFornecedor/" >
                             Cadastre-se, já
                         </a>
                     </p>
