--- a/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
+++ b/SupplierRanking/Views/HomeLogada/RankingGeral.cshtml
@@ -6,9 +6,8 @@
 }
 
 <div class="m-5">
-    
-   
-    <div class="row justify-content-center text-center mt-4" >
+
+    <div class="row justify-content-center text-center mt-4">
         <h2 style="color: #D0A748;font-weight: bold; text-shadow: 1px 2px 0px #6c6c6c;margin-bottom: 8rem;margin-top: 4rem;">
             Esses são nossos Destaques da Semana!
         </h2>
@@ -17,9 +16,9 @@
     <div class="row" style="width: 1705px;">
         <ul class="row list-unstyled m-3">
             @foreach (var item in Model)
-            {  
-                 if (item.Plano.Equals("P"))
-                 {
+            {
+                if (item.Plano.Equals("P"))
+                {
                     <li class="col-12 p-4 mb-5" style="background: white;box-shadow: 0px 0px 9px black;background: #2c8cb6;
                          box-shadow: 0px 0px 23px black;color: white;border: solid 1px #00000045;">
                         <div class="row">
@@ -33,7 +32,7 @@
                                 @if (item.Imagem64 == "")
                                 {
                                     <a href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">
-                                        <img src="/Content/images/iconecor.png" height="100" width="100" style="border-radius: 50%;"/>
+                                        <img src="/Content/images/iconecor.png" height="100" width="100" style="border-radius: 50%;" />
                                     </a>
                                 }
                                 else
@@ -43,8 +42,8 @@
                                         <img src="@imagem64" height="100" width="100" style="border-radius: 50%;" />
                                     </a>
                                 }
-                                        @*</div>*@
-</div>
+                                @*</div>*@
+                            </div>
                             <div class="col-5">
                                 <div class="d-flex align-items-baseline pl-3">
                                     <h4>
@@ -87,8 +86,8 @@
                                 </div>
                             </div>
                             <div class="col-4 d-flex justify-content-between mr-5" style="flex-direction:column; border-left: 2px solid;padding-left: 5rem;">
-                              
-                               <h3>"@item.Slogan"</h3>
+
+                                <h3>"@item.Slogan"</h3>
                                 <p style="color: white;">
                                     @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
                                 </p>
@@ -97,12 +96,12 @@
                                 @if (Session["UserFornecedor"] == null)
                                 {
                                     @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
-                                <button id="#myModal2" class="btn btn-info btn-lg">Avaliar</button>
+                                    <button id="#myModal2" class="btn btn-info btn-lg">Avaliar</button>
                                 }
                                 <a style="text-decoration: none;color: white;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
                             </div>
                         </div>
-                       
+
                     </li>
 
                 }
@@ -136,7 +135,7 @@
                                 <div class="d-flex align-items-baseline pl-3">
                                     <h4 style="font-weight: bold;">
                                         @item.Media
-                                    </h4>  
+                                    </h4>
                                 </div>
                                 <div>
                                     <h2>
@@ -146,7 +145,7 @@
                                 <div>
                                     @item.Nome_categoria
                                 </div>
-                                
+
                             </div>
                             <div class="col-4 d-flex justify-content-between mr-5" style="flex-direction:column; border-left: 2px solid;padding-left: 5rem;">
 
@@ -155,236 +154,231 @@
                                     @item.Endereco, @item.Bairro - @item.Cidade / @item.Uf
                                 </p>
                             </div>
-                            
+
                             <div class="col-1 d-flex flex-wrap justify-content-center align-items-center">
-                            @if (Session["UserFornecedor"] == null)
-                            {
-                                @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
-                                <button id="myBtn" class="btn btn-info btn-lg ">Avaliar</button>
-                            }
+                                @if (Session["UserFornecedor"] == null)
+                                {
+                                    @*<button data-target="#myModal2" class="btn btn-info btn-lg" data-toggle="modal">Avaliar</button>*@
+                                    <button id="myBtn" class="btn btn-info btn-lg">Avaliar</button>
+
+                                }
                                 <a style="text-decoration: none;color: #2c8cb6;" id="" href="/HomeLogada/Perfil/?Cnpj=@item.Cnpj">Perfil</a>
                             </div>
-                            
+
                         </div>
-                        
+
                     </li>
+
                 }
 
             }
+
         </ul>
 
         <!-- Modal -->
         <div id="myModal2" class="modal">
 
-                <!-- Modal content -->
-                <div style="width: 835px;height: 600px;" class="modal-content">
-                    <span class="close-avaliacao">&times;</span>
+            <!-- Modal content -->
+            <div style="width: 835px;height: 600px;" class="modal-content">
+                <span class="close-avaliacao">&times;</span>
 
-                    <h3>Entrega</h3>
-                    <h3>Qualidade</h3>
-                    <h3>Atendimento</h3>
-                    <h3>Preço</h3>
-                    <h3>Satisfação</h3>
+                <h3>Entrega</h3>
+                <h3>Qualidade</h3>
+                <h3>Atendimento</h3>
+                <h3>Preço</h3>
+                <h3>Satisfação</h3>
 
-                    <form method="post" action="../Avaliacao/CadastrarAvaliacao" class="rating">
+                <form method="post" action="../Avaliacao/CadastrarAvaliacao" class="rating">
 
-                       <div style="position: relative;top: -27.5rem;left: 21%;">
+                    <div style="position: relative;top: -27.5rem;left: 21%;">
 
-                           <label>
-                               <input type="radio" name="entrega" value="1" />
-                                <span class="icon">★</span>
-                            </label>
+                        <label>
+                            <input type="radio" name="entrega" value="1" />
+                            <span class="icon">★</span>
+                        </label>
 
-                            <label>
-                               <input type="radio" name="entrega" value="2" />
-                               <span class="icon">★★</span>
-                            </label>
+                        <label>
+                            <input type="radio" name="entrega" value="2" />
+                            <span class="icon">★★</span>
+                        </label>
 
-                            <label>
-                               <input type="radio" name="entrega" value="3" />
-                               <span class="icon">★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="entrega" value="4" />
-                               <span class="icon">★★★★</span>
-                            </label>
+                        <label>
+                            <input type="radio" name="entrega" value="3" />
+                            <span class="icon">★★★</span>
+                        </label>
 
 
-                            <label>
-                               <input type="radio" name="entrega" value="5" />
-                               <span class="icon">★★★★★</span>
-                            </label>
+                        <label>
+                            <input type="radio" name="entrega" value="4" />
+                            <span class="icon">★★★★</span>
+                        </label>
 
 
-                       </div>
-
-                     
-
-                       <div style="position:relative;top: -27.8rem;left: 21%;">
-                          
-
-                            <label>
-                               <input type="radio" name="qualidade" value="1" />
-                                <span class="icon">★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="qualidade" value="2" />
-                               <span class="icon">★★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="qualidade" value="3" />
-                               <span class="icon">★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="qualidade" value="4" />
-                               <span class="icon">★★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="qualidade" value="5" />
-                               <span class="icon">★★★★★</span>
-                            </label>
-
-
-                       </div>
-
-
-
-
-                       <div style="position: relative;top: -28.8rem;left: 21%;">
-                           
-                            <label>
-                               <input type="radio" name="atendimento" value="1" />
-                                <span class="icon">★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="atendimento" value="2" />
-                               <span class="icon">★★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="atendimento" value="3" />
-                               <span class="icon">★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="atendimento" value="4" />
-                               <span class="icon">★★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="atendimento" value="5" />
-                               <span class="icon">★★★★★</span>
-                            </label>
-
-
-                       </div>
-
-
-
-
-                       <div style="position: relative;top: -29.8rem;left: 21%;">
-
-                            <label>
-                               <input type="radio" name="preco" value="1" />
-                                <span class="icon">★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="preco" value="2" />
-                               <span class="icon">★★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="preco" value="3" />
-                               <span class="icon">★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="preco" value="4" />
-                               <span class="icon">★★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="preco" value="5" />
-                               <span class="icon">★★★★★</span>
-                            </label>
-
-
-                       </div>
-
-                      
-
-
-                       <div style="position: relative;top: -29.8rem;left: 21%;">
-
-                            <label>
-                               <input type="radio" name="satisfacao" value="1" />
-                                <span class="icon">★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="satisfacao" value="2" />
-                               <span class="icon">★★</span>
-                            </label>
-
-                            <label>
-                               <input type="radio" name="satisfacao" value="3" />
-                               <span class="icon">★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="satisfacao" value="4" />
-                               <span class="icon">★★★★</span>
-                            </label>
-
-
-                            <label>
-                               <input type="radio" name="satisfacao" value="5" />
-                               <span class="icon">★★★★★</span>
-                            </label>
-
-
-                       </div>
-
-                        <div style="position: relative;top: -239px;">
-                            <h1 style="margin-bottom: -17px;margin-left: 344px;font-size: 23px;">Comentário</h1>
-                            <br />
-                            <input name="comentario" style="margin-left: 161px;width:463px;height:30px" />
-
-                            <button type="submit" class="btn btn-info btn-lg ">Salvar</button>
-                        </div>
-                                              
-                        </form>
-
+                        <label>
+                            <input type="radio" name="entrega" value="5" />
+                            <span class="icon">★★★★★</span>
+                        </label>
 
 
                     </div>
 
 
+
+                    <div style="position:relative;top: -27.8rem;left: 21%;">
+
+
+                        <label>
+                            <input type="radio" name="qualidade" value="1" />
+                            <span class="icon">★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="qualidade" value="2" />
+                            <span class="icon">★★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="qualidade" value="3" />
+                            <span class="icon">★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="qualidade" value="4" />
+                            <span class="icon">★★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="qualidade" value="5" />
+                            <span class="icon">★★★★★</span>
+                        </label>
+
+
                     </div>
+
+
+
+
+                    <div style="position: relative;top: -28.8rem;left: 21%;">
+
+                        <label>
+                            <input type="radio" name="atendimento" value="1" />
+                            <span class="icon">★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="atendimento" value="2" />
+                            <span class="icon">★★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="atendimento" value="3" />
+                            <span class="icon">★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="atendimento" value="4" />
+                            <span class="icon">★★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="atendimento" value="5" />
+                            <span class="icon">★★★★★</span>
+                        </label>
+
+
+                    </div>
+
+
+
+
+                    <div style="position: relative;top: -29.8rem;left: 21%;">
+
+                        <label>
+                            <input type="radio" name="preco" value="1" />
+                            <span class="icon">★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="preco" value="2" />
+                            <span class="icon">★★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="preco" value="3" />
+                            <span class="icon">★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="preco" value="4" />
+                            <span class="icon">★★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="preco" value="5" />
+                            <span class="icon">★★★★★</span>
+                        </label>
+
+
+                    </div>
+
+
+
+
+                    <div style="position: relative;top: -29.8rem;left: 21%;">
+
+                        <label>
+                            <input type="radio" name="satisfacao" value="1" />
+                            <span class="icon">★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="satisfacao" value="2" />
+                            <span class="icon">★★</span>
+                        </label>
+
+                        <label>
+                            <input type="radio" name="satisfacao" value="3" />
+                            <span class="icon">★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="satisfacao" value="4" />
+                            <span class="icon">★★★★</span>
+                        </label>
+
+
+                        <label>
+                            <input type="radio" name="satisfacao" value="5" />
+                            <span class="icon">★★★★★</span>
+                        </label>
+
+
+                    </div>
+
+                    <div style="position: relative;top: -239px;">
+                        <h1 style="margin-bottom: -17px;margin-left: 344px;font-size: 23px;">Comentário</h1>
+                        <br />
+                        <input name="comentario" style="margin-left: 161px;width:463px;height:30px" />
+                        @*<input id="cnpj" name="cnpj_fornecedor"  style="font-size: 10px;" />*@
+
+                        <button type="submit" class="btn btn-info btn-lg ">Salvar</button>
+                    </div>
+
+                </form>
+
+            </div>
+
+        </div>
 
     </div>
-          
-              
-               
-                  
-                    
 
-       
+</div>
 
- 
-
+  
