--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -106,61 +106,82 @@
                 <div class="sidebar-header" style="height: 104px;">
                     <h3>Supplier Ranking</h3>
                 </div>
+
+                <!-- Perfil do login -->
                 <ul class="list-unstyled components">
-                    <li class="active">
-                        <a href="/HomeLogada/RankingGeral"  aria-expanded="false">Home</a>
-                    </li>
-                    @*<li>
-                        <a href="/HomeLogada/Pesquisa"  aria-expanded="false">Pesquisar</a>
-                    </li>*@
-                    
+                    <a style="display:flex; justify-content:center;">Bem-vindo!</a>
+                    @if (Session["UserFornecedor"] != null)
+                    {
+                        <a href="/HomeLogada/Perfil/?Cnpj=@Session["UserFornecedor"].ToString()">
+                            <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 10px auto auto 25px;" />
+                        </a>
+                        <a style="font-family:inherit; font-size: 20px; display:flex; justify-content:center;">@Session["NomeUsuario"].ToString()</a>
+                    }
+                    else if (Session["UserPessoaFisica"] != null || Session["UserPessoaJuridica"] != null)
+                    {
+                        <a style="font-family:inherit; font-size: 20px; display:flex; justify-content:center;">@Session["NomeUsuario"].ToString()</a>
+                        <img src="~/Content/images/user.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 10px auto auto 25px;" />
+                    }
+                    <br />
+                    <ul class="list-unstyled components"></ul>
+
                     <li>
-                        <a href="/HomeLogada/RankingPremium"  aria-expanded="false">Ranking Premium</a>
-                    </li>
-
-                    <li >
-                        <a href="/HomeLogada/Suporte" aria-expanded="false">Suporte</a>
-                    </li>
-
-                    <li>
-                        @*<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" >Sair</a>*@ 
-                        @Html.ActionLink("Sair", "Sair", "Home", new { area = "" }, new { @class = "" })
-
                         @if (Session["UserPessoaFisica"] != null)
                         {
-                        <a href="/Comprador/UpdatePessoaFisica/?Codigo=@Session["CodigoUsuario"].ToString()">UpdatePessoaFisica</a>
+                            <a style="text-decoration: none;font-family: inherit;"
+                            href="/Comprador/UpdatePessoaFisica/?Codigo=@Session["CodigoUsuario"].ToString()" aria-expanded="false">Editar Perfil</a>
                         }
                         else if (Session["UserPessoaJuridica"] != null)
                         {
-                        <a href="/Comprador/UpdatePessoaJuridica/?Codigo=@Session["CodigoUsuario"].ToString()">UpdatePessoaJuridica</a>
+                            <a style="text-decoration: none;font-family: inherit;"
+                            href="/Comprador/UpdatePessoaJuridica/?Codigo=@Session["CodigoUsuario"].ToString()" aria-expanded="false">Editar Perfil</a>
                         }
                         else if (Session["UserFornecedor"] != null)
                         {
-                            <a href="/Fornecedor/UpdateFornecedor/?Cnpj=@Session["UserFornecedor"].ToString()">UpdateFornecedor</a>
+                            <a style="text-decoration: none;font-family: inherit;" 
+                            href="/Fornecedor/UpdateFornecedor/?Cnpj=@Session["UserFornecedor"].ToString()" aria-expanded="false">Editar Perfil</a>
                         }
+                    </li>
 
-                        @*@Html.ActionLink("Editar informações", "UpdatePessoaFisica", "Comprador", new { area = "" }, new { @class = "" })*@
+                    <li>
+                        <a style="text-decoration: none; font-family: inherit;"
+                        href="/Comprador/UpdateSenha/" aria-expanded="false">Alterar Senha</a>
+                    </li>
 
+                    <li>
+                        <a style="text-decoration: none; font-family: inherit;"
+                        href="/Home/Sair/" aria-expanded="false">Encerrar Sessão</a>
                     </li>
                 </ul>
-                
-                    @if (Session["UserFornecedor"] != null)
-                    {
-                    <a href="/HomeLogada/Perfil/?Cnpj=@Session["UserFornecedor"].ToString()">
-                        <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
-                    </a>
-                    <a style="font-family:inherit; font-size: 20px; margin-left: 23px;">@Session["NomeUsuario"].ToString()</a>  
-                    }
-                    else 
-                    {
-                        <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
-                        <a style="font-family:inherit; font-size: 20px; display:flex; justify-content:center;">@Session["NomeUsuario"].ToString()</a>
-                    }
-                    <br />
-                    <a style="text-decoration: none;color: white;font-family: inherit;
-                    margin-left: 25px;" href="/Comprador/UpdateSenha/" >Alterar senha</a>
-                   
-                    
+
+
+                    <ul class="list-unstyled components">
+                        <li class="active">
+                            <a href="/HomeLogada/RankingGeral" aria-expanded="false">Ranking Geral</a>
+                        </li>
+                        @*<li>
+                    <a href="/HomeLogada/Pesquisa"  aria-expanded="false">Pesquisar</a>
+                </li>*@
+
+                        <li>
+                            <a href="/HomeLogada/RankingPremium" aria-expanded="false">Ranking Premium</a>
+                        </li>
+
+                        <li>
+                            <a href="/HomeLogada/Suporte" aria-expanded="false">Suporte</a>
+                        </li>
+
+                        <li>
+                            @*<a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" >Sair</a>*@
+
+
+                            @*@Html.ActionLink("Editar informações", "UpdatePessoaFisica", "Comprador", new { area = "" }, new { @class = "" })*@
+
+                        </li>
+                    </ul>
+
+
+
             </nav>
             <!---- Modal ---->
             <div class="modal fade" id="myModal" role="dialog">
