--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -29,9 +29,10 @@
         
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700">
         <link rel="stylesheet" href="~/Content/config/css/style.css" />
-        <link href="~/Content/css/checkbox-home-logada.css" rel="stylesheet" />
-        <link href="~/Content/css/style_logada.css" rel="stylesheet" />
-        <link href="~/Content/config/css/avaliar-star.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/Content/css/style_login.css" />
+        <link rel="stylesheet" href="~/Content/css/checkbox-home-logada.css" />
+        <link rel="stylesheet" href="~/Content/css/style_logada.css" />
+        <link rel="stylesheet" href="~/Content/config/css/avaliar-star.css" />
 
         <!-- Font Awesome JS -->
         @*<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
@@ -40,58 +41,28 @@
 
     <body>
         <div>
-            <section style=" width: 2000px;height: 104px;background: #0C496BE6;position: absolute;top: 0px;left:0px;">
 
-                <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1000px;position:absolute;left: 19%;top:10px;">
-                    <form style="height: 52px;" action="../HomeLogada/Pesquisa" method="post">
-                        <div class="container-fluid">
-                            <!-- <button type="button" id="sidebarCollapse" onmouse="menu()"class="btn btn-info">
-                        <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
+            <!-- Barra de Pesquisa -->
+            <section class="row col-12 section-pesquisa d-flex justify-content-center align-items-center">
+                <nav class="col-7 navbar bg-light m-0">
+                    <form class="row col-12" method="post" action="../HomeLogada/Pesquisa">
 
-                    </button>-->
-                            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <i class="fas fa-align-justify"></i>
-                            </button>
-
-                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                <input name="pesquisa" class="col-10 wrap-input pl-2 mt-3" style="width:870px;height: 40px;background-color: white;margin-left: 53px;" placeholder="Digite aqui o nome do fornecedor..." />
+                            <div id="navbarSupportedContent" class="col-11">
+                                <input name="pesquisa" class="input input-pesquisa pl-5 pr-5" placeholder="Digite a Categoria ou Fornecedor..." />
                             </div>
 
-                            <!--<img style="width: 27px;height: 27px;margin-right: 100px; "src="imagens/pesquisa.png"/>-->
-                            <button type="submit" style="background: url('../Content/images/pesquisa.png') no-repeat;width: 30px;height:30px;margin-right: 45px;margin-top: -37px;float: right;"></button>
+                            <div class="d-flex justify-content-around align-items-center wrap-btns">
+                                <button type="submit" class="btn-pesquisa ml-2 mr-4"></button>
 
-                            <button type="button" id="btfiltro" onclick="filtro()" style="background: url('../Content/images/filtro.png') no-repeat;width: 30px;height:30px;margin-top: -35px;float: right;"
-                                    class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
-                            </button>
-
-
-
-                        </div>
+                                <button type="button" id="btfiltro" class="btn-filtro" 
+                                        onclick="filtro()" data-toggle="modal" data-target="#myModal"></button>
+                            </div>
                     </form>
                 </nav>
-
-                <div class="container-fluid">
-                    <!-- <button type="button" id="sidebarCollapse" onmouse="menu()"class="btn btn-info">
-                <i class="fas fa-align-left"></i>
-                <span>Toggle Sidebar</span>
-
-            </button>-->
-
-                    <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
-                    </button>
-
-                    <!--<img style="width: 27px;height: 27px;margin-right: 100px; "src="imagens/pesquisa.png"/>-->
-
-                </div>
-
             </section>
 
-
-
-
-            @*<nav id="sidebar">
+            <!-- Menu Lateral -->
+            <nav id="sidebar">
                 <div class="sidebar-header" style="height: 104px;">
                     <h3>Supplier Ranking</h3>
                 </div>
@@ -126,7 +97,9 @@
                         <img src="/Content/images/iconecor.png" id="perfil" style="width: 100px; height: 100px; border-radius: 50px; border: 1px solid white; margin: 167px auto auto 20px;"/>
                     }
                     
-            </nav>*@
+            </nav>
+
+
             <!---- Modal ---->
             @*<div class="modal fade" id="myModal" role="dialog">
                 <div class="modal-dialog modal-lg">
